--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,3 +1,35 @@
+@media only screen and (max-width: 400px) {
+	div#perfil header h2 {
+		opacity: 0.5;
+		font-size: 10px;
+	}
+
+	div.caja {
+		width: 100%;
+	}
+
+	div#datos h2{
+		display: none;
+	}
+
+	div#espol  {
+		display: block;
+	}
+
+	b#materia {
+		display: none;
+	}
+
+	div#educacion img {
+		width: 50%;
+	}
+}
+
+* {
+    box-sizing: border-box;
+}
+
+
 header#titulo h1{
 	text-align: center;
 	margin: 15px auto;
@@ -58,7 +90,7 @@ li {
 	box-shadow: 10px 10px 10px #ccccff;
 }
 
-b {
+div ul b {
 	color: white;
 	position: relative;
 	left: -10px;
