--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,19 +1,73 @@
 @media only screen and (max-width: 400px) {
-	div#perfil header h2 {
-		opacity: 0.5;
-		font-size: 10px;
+	* {
+    box-sizing: border-box;
+	}
+
+	header#titulo h1{
+		display: none;
 	}
 
 	div.caja {
 		width: 100%;
+		background-color: #d4e3fc;
+		border: 1pt;
+		border-style: solid;
+		border-color: #cbccc1;
+		border-radius: 5%;
+		padding: 5px;
+		margin: 10pt 150pt;
 	}
 
+	div#perfil {
+		margin-top: 50px;
+		text-align: center;
+
+	}
+
+	div#perfil h2 {
+		width: 50%;
+		border: 1pt;
+		border-style: solid;
+		border-color: black;
+		background-color:white;
+		opacity: 0.5;
+		font-size: 11px;
+		margin-right: auto;
+		margin-left: auto;	
+	}
+
+	div#perfil header img{
+		margin-top: -90px;
+		width:55%;
+		margin-left: auto;
+		margin-right: auto;
+		display: block;
+		border-radius: 5%;
+	}
+
+	div#iperfil {
+		text-align: center;
+	}
+
+	div#iperfil p.u {
+		display: none;
+	}
+
+	div#iperfil p {
+		margin-top: 0px;
+		margin-bottom: 0px;
+	}
 	div#datos h2{
 		display: none;
 	}
 
-	div#espol  {
-		display: block;
+	div#educacion header {
+		text-align: center;
+	}
+
+	div#espol p {
+		margin-top: 0px;
+		margin-bottom: 0px;
 	}
 
 	b#materia {
@@ -23,12 +77,50 @@
 	div#educacion img {
 		width: 50%;
 	}
-}
 
-* {
+	div#habilidad header {
+		text-align: center;
+	}
+
+	li {
+		display: inline-block;
+		text-align: left;
+		margin: 5px 35px;
+		padding: 10pt 0pt;
+		width: 120px;
+		border-radius: 25px;
+		background-color: #E0E0E0;	
+		box-shadow: 10px 10px 10px #ccccff;
+	}
+
+	div ul {
+		margin: 0px;
+		padding: 0px;
+	}
+
+	div ul b {
+		color: white;
+		position: relative;
+		left: -10px;
+		background-color: blue;
+		border-radius: 25px;
+		padding: 10pt 13pt;
+	}
+
+	div ul li.h1 {
+		margin-right: auto;
+		margin-left: 6px;	
+	}
+
+	div ul li.h2 {
+		margin-right: auto;
+		margin-left: 6px;
+	}
+
+
+/** {
     box-sizing: border-box;
 }
-
 
 header#titulo h1{
 	text-align: center;
@@ -39,8 +131,8 @@ body {
 	background-image: url("http://www.neoradio.cl/wp-content/uploads/2015/07/diseno-de-fondos-blanco-1851.jpg");
 }
 
-div img{
-	width:8%;
+div img {
+	width:12%;
 	float:left;
 	margin-right: 10px;
 }
@@ -54,6 +146,10 @@ div.caja {
 	margin: 10pt 150pt;
 }
 
+div#perfil header h2 {
+	text-align:left;
+}
+
 div#datos header h2 {
 	text-align:center;
 }
@@ -63,13 +159,18 @@ p.anio {
 }
 
 div#espol img{
-	width:33%;
+	width:32%;
 	float:left;
 	margin-right: 10px;
 }
 
+div#espol p {
+	margin-top: 0px;
+	margin-bottom: 0px;
+}
+
 div#uebcr img{
-	width:33%;
+	width:32%;
 	float:left;
 	margin-right: 10px;
 }
@@ -97,4 +198,4 @@ div ul b {
 	background-color: blue;
 	border-radius: 25px;
 	padding: 10pt 13pt;
-}
+}*/
