--- a/css/estilo.css
+++ b/css/estilo.css
@@ -15,7 +15,7 @@
 		border-color: #cbccc1;
 		border-radius: 5%;
 		padding: 5px;
-		margin: 20pt 150pt;
+		margin: 20pt 150pt !important;
 	}
 
 	div#perfil {
@@ -32,11 +32,12 @@
 		opacity: 0.5;
 		font-size: 11px;
 		margin-right: auto;
-		margin-left: auto;	
+		margin-left: auto;
+		
 	}
 
 	div#perfil header img{
-		margin-top: -90px;
+		margin-top: -25%;
 		width:55%;
 		margin-left: auto;
 		margin-right: auto;
@@ -87,7 +88,7 @@
 	}
 
 	div#educacion img {
-		width: 90%;
+		width: 90% !important;
 	}
 
 	div#educacion h4 {
@@ -113,28 +114,9 @@
 		display: none;
 	}
 
-	li {
-		display: inline-block;
-		text-align: left;
-		margin: 5px 35px;
-		padding: 10pt 0pt;
-		border-radius: 25px;
-		background-color: #E0E0E0;	
-		box-shadow: 10px 10px 10px #ccccff;
-	}
-
 	div ul {
 		margin: 0px;
 		padding: 0px;
-	}
-
-	div ul b {
-		color: white;
-		position: relative;
-		left: -10px;
-		background-color: blue;
-		border-radius: 25px;
-		padding: 10pt 13pt;
 	}
 
 	ul li {
@@ -146,7 +128,7 @@
 }
 
 
-/** {
+* {
     box-sizing: border-box;
 }
 
@@ -160,8 +142,8 @@ body {
 }
 
 div img {
-	width:12%;
-	float:left;
+	width:10%;
+	/*float:left;*/
 	margin-right: 10px;
 }
 
@@ -187,7 +169,7 @@ p.anio {
 }
 
 div#espol img{
-	width:32%;
+	width:25%;
 	float:left;
 	margin-right: 10px;
 }
@@ -198,7 +180,7 @@ div#espol p {
 }
 
 div#uebcr img{
-	width:32%;
+	width:25%;
 	float:left;
 	margin-right: 10px;
 }
@@ -226,4 +208,4 @@ div ul b {
 	background-color: blue;
 	border-radius: 25px;
 	padding: 10pt 13pt;
-}*/
+}
