--- a/css/estiloFilms.css
+++ b/css/estiloFilms.css
@@ -10,7 +10,11 @@
 		padding: 0px;
 	}
 
-	header#titulo h1{
+	body {
+		background-color: #CFE9F5;
+	}
+
+	header#titulo h1 {
 		text-align: center;
 		margin: 15px auto;
 		font-family: 'Anton';
@@ -33,9 +37,10 @@
 	}
 
 	div header h2 {
+		text-align: center;
 		font-family: 'Lobster';
 		color: #9e0947;
-		font-size: 0.5em !important;
+		font-size: 1.5em !important;
 		margin: 10px 0px !important;
 	}
 
@@ -96,12 +101,13 @@
 
 	div.film {
 		border: 0px !important;
+		text-align: center;
 	}
 
 }
 
 /*Smartphones*/
-/*@media only screen and (max-width: 480px) {
+@media only screen and (max-width: 599px) {
 	
 	* {
     box-sizing: border-box;
@@ -151,18 +157,22 @@
 	div#p2 header, div#p3 header, div#p4 header {
 		font-family: 'Lobster';
 		color: #9e0947;
-		font-size: 0.8em;
+		font-size: 1.2em;
+	}
+
+	div img[alt="planvuelo"]{
+		width:50%;
 	}
 
 	div img {
-		width:60%;
+		width:90%;
 		float:left;
 		margin-right: 10px;
 		display: inline-block;
 	}
 
 	div#p2 img, div#p3 img, div#p4 img {
-		margin-top: -20%;
+		margin-top: -25%;
 	}
 
 	div img:hover {
@@ -181,6 +191,8 @@
 	div#p1 p.sinopsis {
 		margin-right: auto;
 		text-align: justify;
+		font-family: Verdana;
+		font-size: 10pt;
 	}
 
 	div#p2 p.sinopsis, div#p3 p.sinopsis, div#p4 p.sinopsis {
@@ -210,10 +222,10 @@
 		padding: 0px;
 	}
 
-}*/
+}
 
 
-header#titulo h1{
+/*header#titulo h1{
 	text-align: center;
 	margin: 15px auto;
 	font-family: 'Anton';
@@ -297,4 +309,4 @@ div.film {
 	border: 1px;
 	border-style: dotted;
 	border-color: #d7d8cb;
-}
+}*/
